aws-3tier-infra/templates/network/route-tables.yaml
AWSTemplateFormatVersion: '2010-09-09'

Resources:

  PublicRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCId

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !ImportValue IGWId

  PublicSubnetAssoc1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Select [0, !Split [",", !ImportValue PublicSubnets]]
      RouteTableId: !Ref PublicRT

  PublicSubnetAssoc2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Select [1, !Split [",", !ImportValue PublicSubnets]]
      RouteTableId: !Ref PublicRT


  PrivateRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCId

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRT
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !ImportValue NATId

  PrivateSubnetAssoc1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Select [0, !Split [",", !ImportValue PrivateSubnets]]
      RouteTableId: !Ref PrivateRT

  PrivateSubnetAssoc2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Select [1, !Split [",", !ImportValue PrivateSubnets]]
      RouteTableId: !Ref PrivateRT
